--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="current_rotate_time">修改旋转速度，当前%1$s</string>
     <string name="delete_progress_btn_text">去除进度条,玩转弧线</string>
     <string name="increase_the_progress_btn_text">增加进度:</string>
+
+    <string name="smile_view">笑脸😊</string>
 </resources>
